[tool.poetry]
name = "web3-input-decoder"
version = "1.0.0"
# doc
authors = ["Weiliang Li <to.be.impressive@gmail.com>"]
description = "A simple offline web3 transaction input decoder for functions and constructors"
license = "MIT"
maintainers = ["Weiliang Li <to.be.impressive@gmail.com>"]
readme = "README.md"
repository = "https://github.com/kigawas/web3-input-decoder"
# tags
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: Implementation :: CPython",
  "Operating System :: OS Independent",
]
keywords = ["ethereum", "web3"]
# package data: PEP-561
include = ["web3_input_decoder/py.typed"]

[tool.poetry.dependencies]
python = "^3.7"

# 3rd party
eth-abi = "^3.0.0"
eth-utils = "^2.0.0"


# eth-utils depends on eth-hash, which has two different backends as per:
# https://eth-hash.readthedocs.io/en/latest/quickstart.html#quickstart, so
# we lift the selection of backend to the consumers of web3-input-decoder
pysha3 = { version = "1.0.2", optional = true }
pycryptodome = { version = "^3.15", optional = true }

[tool.poetry.extras]
hashing-backend-pysha3 = ["pysha3"]
hashing-backend-pycryptodome = ["pycryptodome"]


[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"
ipython = { version = "^8.4.0", python = "^3.8" }
mypy = "^0.971"

# stubs
eth-typing = "^3.0.0"

# test
pyinstrument = "^4.3.0"
pytest = "^7.1.3"
pytest-cov = "^3.0.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.isort]
multi_line_output = 3
profile = "black"
